[package]
name = "aoc-01"
version = "0.1.0"
authors = ["alyssa"]
edition = "2018"

[dependencies]
indextree = "4.0.0"
permutohedron = "0.2.4"

[lib]
name = "intcode"
path = "intcode/lib.rs"

[[bin]]
name = "aoc-01"
path = "01/main.rs"

[[bin]]
name = "aoc-02"
path = "02/main.rs"

[[bin]]
name = "aoc-03"
path = "03/main.rs"

[[bin]]
name = "aoc-04"
path = "04/main.rs"

[[bin]]
name = "aoc-05"
path = "05/main.rs"

[[bin]]
name = "aoc-06"
path = "06/main.rs"

[[bin]]
name = "aoc-07"
path = "07/main.rs"
